@@ -1,145 +1,122 @@
-.menu ul, #menu_container
-{
+.menu ul, #menu_container {
 	background-image: none;
 }
 #menu_container {
 	height: 1%;
 }
-.codeheader, code.bbc_code
-{
+.codeheader, code.bbc_code {
 	width: 96%;
 	margin: 0 auto;
 }
-.cat_bar h3 input.input_check
-{
+.cat_bar h3 input.input_check {
 	margin: 0 4px;
 }
 
 /* The dropdown menus
 ------------------------------------------------------- */
 
-.menu a:hover
-{
+.menu a:hover {
 	text-decoration: none;
 }
 
 /* the page section */
-.pagesection
-{
+.pagesection {
 	overflow: auto;
 }
-#top_section
-{
+#top_section {
 	height: 1%;
 }
 
 /* the tabled definition lists */
-dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd, #poll_options dl.options dd, .login dd
-{
+dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd, #poll_options dl.options dd, .login dd {
 	float: none !important;
 	width: auto;
 }
 /* generic lists header */
 /* Side paddings must NOT be defined here.*/
-.table_grid thead th
-{
+.table_grid thead th {
 	padding-top: 0 !important;
 	padding-bottom: 0 !important;
 }
 
 /* overflow: hidden doesn't help in IE6. */
-.title_bar h3 a, .title_bar h3, .title_bar h4, .title_bar h4 a
-{
+.title_bar h3 a, .title_bar h3, .title_bar h4, .title_bar h4 a {
 	display: inline-block;
 }
 
-#upper_section
-{
+#upper_section {
 	display: inline-block;
 }
 
 /* Overrides for the message index template
 ------------------------------------------------------- */
-#messageindex table
-{
+#messageindex table {
 	margin-top: 5px;
 }
-#messageindex table th
-{
+#messageindex table th {
 	border-bottom: 1px solid #fff;
 }
-#topic_icons .description
-{
+#topic_icons .description {
 	padding: 2em 1em 1em 1em;
 	overflow: auto;
 }
 
 /* Overrides for the display template
 ------------------------------------------------------- */
-#forumposts .postarea
-{
+#forumposts .postarea {
 	margin-left: 0;
 	margin-right: 0;
 	float: right;
 }
-.keyinfo
-{
+.keyinfo {
 	padding-bottom: 6px;
 }
-.inner
-{
+.inner {
 	clear: both;
 }
-.buttonlist a
-{
+.post {
+	word-wrap: break-word;
+}
+.buttonlist a {
 	text-decoration: none;
 	width: 1%;
 	white-space: nowrap;
 }
-.buttonlist a:hover
-{
+.buttonlist a:hover {
 	text-decoration: none;
 }
-#forumposts .cat_bar h3
-{
+#forumposts .cat_bar h3 {
 	clear: both;
 }
-.signature
-{
+.signature {
 	padding: 0 0 0.8em 0;
 }
 
 /* Styles for the statistics center.
 ------------------------------------------------- */
-#statistics div.content
-{
+#statistics div.content {
 	height: 210px;
 	overflow: hidden;
 }
-#statistics div.top_row
-{
+#statistics div.top_row {
 	height: 150px;
 }
 
 /* Overrides for the admin template
 ------------------------------------------------------- */
-#main_section
-{
+#main_section {
 	height: 655px;
 }
-#main_section table
-{
+#main_section table {
 	width: 99%;
 }
 
 /* Overrides for the profile template
 ------------------------------------------------------- */
-#basicinfo h4
-{
+#basicinfo h4 {
 	word-wrap: break-word;
 }
-.ignoreboards
-{
+.ignoreboards {
 	margin: 0 1%;
 	padding: 0;
 	width: 45%;
@@ -147,8 +124,7 @@ dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd, #poll_options dl.
 
 /* Overrides for the personal messages template
 ------------------------------------------------------- */
-#personal_messages .postarea
-{
+#personal_messages .postarea {
 	margin-left: 0;
 	margin-right: 0;
 	float: right;
@@ -156,14 +132,12 @@ dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd, #poll_options dl.
 
 /* Overrides for the admin section of the register template
 ----------------------------------------------------------- */
-#registration_agreement
-{
+#registration_agreement {
 	width: 99.5%;
 	margin: 0 auto;
 }
 
-#edit_poll ul.poll_main li
-{
+#edit_poll ul.poll_main li {
 	padding-left: 0;
 	margin: 0 -2em;
 }
@@ -172,8 +146,7 @@ dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd, #poll_options dl.
 /* Misc hacks
 ------------- */
 
-.iefs
-{
+.iefs {
 	display: none;
 	z-index: 9;
 	position: absolute;
@@ -185,8 +158,7 @@ dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd, #poll_options dl.
 .menu {
 	width: 90%;
 }
-.menu li
-{
+.menu li {
 	border-bottom: 1px dotted white;
 }
 #context_menus h4 {
@@ -202,8 +174,7 @@ dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd, #poll_options dl.
 	background: none;
 }
 
-#header, #navi, #content_section, #footer
-{
+#header, #navi, #content_section, #footer {
 	width: expression(this.clientWidth > 1200 ? '1200px' : '95%');
 	margin: auto;
 }
