@@ -39,6 +39,7 @@ dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd, #poll_options dl.
 {
 	padding-top: 1em;
 	float: none;
+	word-wrap: break-word;
 }
 #content_section #forumposts div.cat_bar
 {
